Smokey air in ottawa

--- a/scenarioA/weather/airquality/pages/onaq-008_e.html
+++ b/scenarioA/weather/airquality/pages/onaq-008_e.html
@@ -175,8 +175,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <main role="main" property="mainContentOfPage" id="TTT" class="container">
 <h1 id="wb-cont">Ottawa - Air Quality Health Index
 	</h1>
+	
 <section class="visible-md visible-lg visible-sm overflow-hide">
+
+
   <div class="col-md-10 col-md-push-1">
+	<div id="statement">
+	<h2>
+	<a href="../../warnings/ottawa-report_e.html">SPECIAL AIR QUALITY STATEMENT  IN EFFECT</a>
+	</h2>
+	</div>
     <div class="row wxo-title-box">
       <div class="navcontainer wxo-vertical-align">
         <div class="col-md-4 col-sm-4">
@@ -199,21 +207,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <div class="margin-top-small margin-bottom-small indent-medium">
         <strong class="bold">
           <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=3E3FDF68-1#wsA52DC9CF">Calculated at:</a>
-        </strong>4:00 PM EDT Wednesday 23 August 2017</div>
+        </strong>4:00 PM EDT Wednesday 23 September 2017</div>
       <div class="col-md-12 align-center">
         <div class="col-md-offset-1 col-lg-offset-2 col-sm-offset-1">
           <div class="font-large black">
             <div class="indexBarWithInvisibleBorders clr-chart-big-width bar1Invisible"></div>
-            <div class="indexBarWithInvisibleBorders clr-chart-big-width">
-              <p class="withBorder">2<span class="wb-invisible">Low Risk</span></p>
-              <div class="arrow-down"></div>
-            </div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
+            <div class="indexBarWithInvisibleBorders clr-chart-big-width">              <p class="withBorder">8<span class="wb-invisible">High Risk</span></p>
+              <div class="arrow-down"></div></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
@@ -311,17 +317,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <p>Wednesday night</p>
         </div>
         <div class="col-md-4 col-sm-3">
-          <b>2 -
-						</b>Low Risk</div>
+          <b>5 -
+						</b>Moderate Risk</div>
         <div class="col-md-6 col-sm-6 row-end">
           <div class="font-large black">
             <div class="clr-chart-small clr-chart-small-width bgValue1 bar1"></div>
             <div class="bott clr-chart-small clr-chart-small-width bgValue2">
-              <div class="push-up arrow-down"></div>
             </div>
             <div class="clr-chart-small clr-chart-small-width bgValue3"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue4"></div>
-            <div class="clr-chart-small clr-chart-small-width bgValue5"></div>
+            <div class="clr-chart-small clr-chart-small-width bgValue5">
+			 <div class="push-up arrow-down"></div>
+			 </div>
             <div class="clr-chart-small clr-chart-small-width bgValue6"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue7"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue8"></div>
@@ -409,13 +416,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <br>
       <div class="col-xs-12 boldSmoke">Wednesday night</div>
       <div class="col-xs-12">
-        <strong>2 -	</strong>Low Risk</div>
+        <strong>8 -	</strong>High Risk</div>
       <br>
       <br>
       <br>
       <div class="col-xs-12 boldSmoke">Thursday</div>
       <div class="col-xs-12">
-        <strong>2 -	</strong>Low Risk</div>
+        <strong>4 -	</strong>Moderate Risk</div>
       <br>
       <br>
       <br>
