--- a/scenarioS/weather/warnings/ottawa-report_e.html
+++ b/scenarioS/weather/warnings/ottawa-report_e.html
@@ -169,22 +169,24 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </div>
 <div class="clearfix"></div>
-<div id='collapsible-alerts' class='container'></div>
+<div id="collapsible-alerts" class="container"></div>
 <div class="clearfix"></div>
-<main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont" property="name">Alerts for: City of Ottawa
-</h1>
-
-<div class="row">
+		<main role="main" property="mainContentOfPage" class="container">
+	 <h1 property="name" id="wb-cont">Alerts for: City of Ottawa</h1>
+	 <div class="row">
 	 <div class="col-xs-12">
 
-    <h2>Watches</h2> <p><span id="ottawatest">10:12 AM MDT Wednesday 26 July 2017</span><br/> <strong>Severe thunderstorm watch in effect for:</strong> </p> 
-<ul> <li>Ottawa (Kanata - Orléans), ON</li> <li>Ottawa (Richmond - Metcalfe), ON</li></ul>
- <p>Conditions are favourable for the development of severe thunderstorms this afternoon and this evening.<br/><br/>An unstable airmass to the southwest will lead to thunderstorms this afternoon and this evening.  Some of these thunderstorms may become severe with the main threats being hail to the size of loonies and rainfall amounts up to 50 mm.</p>
- <p>Rapidly rising rivers and creeks can sweep away bridges, culverts, buildings, and people. Very large hail can damage property, break windows, dent vehicles and cause serious injury. Intense lightning is likely with any thunderstorm that develops. Remember, severe thunderstorms can produce tornadoes. Heavy downpours can cause flash floods and water pooling on roads. Lightning kills and injures Canadians every year. Remember, when thunder roars, go indoors!<br/><br/>Severe thunderstorm watches are issued when atmospheric conditions are favourable for the development of thunderstorms that could produce one or more of the following: large hail, damaging winds, torrential rainfall.<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.storm.ec@canada.ca or tweet reports using #NTStorm.</p>
+    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10:26 AM PST Saturday 14 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
+<ul> <li>Ottawa</li> </ul>
+ <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.<br/>
 
- 
- 
+	<br/>Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.<br/>
+
+<br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/>
+
+<br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com <br/>
+
+ <p>Issued by Environment Canada</p>
  
  
 <section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/rss/battleboard/nt16_e.xml"><img src="../../weather/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
