--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -647,7 +647,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <tbody>
                 <tr class="pdg-btm-0">
                   <td>
-                    <a href="/weather/forecast/hourly/on-118_metric_e.html">
+                    <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
@@ -754,7 +754,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Chance of showers" class="pull-right" title="Chance of showers"></div>
             <div class="col-xs-6">
-              <a href="/forecast/hourly/on-118_metric_e.html">
+			
+		
+              <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
                 <strong title="Friday">Today</strong>
               </a>
               <br><span class="high wxo-metric-hide" title="max">29&deg;<abbr title="Celsius">C</abbr>
@@ -1030,22 +1032,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
       </li>
       <li>
-        <a href="/radar/index_e.html?id=xft" class="btn btn-default btn-sm btn-block">Radar</a>
+        <a href="../../../weather/radar/index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
       </li>
       <li>
-        <a href="/satellite/index_e.html#goes_east" class="btn btn-default btn-sm btn-block">Satellite</a>
+        <a href="../../../weather/satellite/index_e.html" class="btn btn-default btn-sm btn-block">Satellite</a>
       </li>
       <li>
-        <a href="/lightning/index_e.html" class="btn btn-default btn-sm btn-block">Lightning</a>
+        <a href="../../../weather/lightning/index_e.html" class="btn btn-default btn-sm btn-block">Lightning</a>
       </li>
       <li>
-        <a href="/forecast/hourly/on-118_metric_e.html" class="btn btn-default btn-sm btn-block">24 Hour Forecast</a>
+        <a href="../../../weather/forecast/hourly/on-118_metric_e.html" class="btn btn-default btn-sm btn-block">24 Hour Forecast</a>
       </li>
       <li>
-        <a href="/airquality/pages/onaq-008_e.html" class="btn btn-default btn-sm btn-block">Air Quality Health Index</a>
+        <a href="../../../weather/airquality/pages/onaq-008_e.html" class="btn btn-default btn-sm btn-block">Air Quality Health Index</a>
       </li>
       <li>
-        <a class="btn btn-default btn-sm btn-block" href="/warnings/index_e.html">Alerts</a>
+        <a class="btn btn-default btn-sm btn-block" href="../../../weather/warnings/index_e.html">Alerts</a>
       </li>
       <li>
         <a href="/jet_stream/index_e.html" class="btn btn-default btn-sm btn-block">Jet Stream</a>
