--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -188,8 +188,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
-            <a class="wxo-metric-hide" href="/web/20170101123719/http://weather.gc.ca/past_conditions/index_e.html?station=yow">Past 24 hours</a>
-            <a class="wxo-imperial-hide wxo-city-hidden" href="/web/20170101123719/http://weather.gc.ca/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hours</a>
+            <a class="wxo-metric-hide" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
+            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
           </li>
            <li class="brdr-lft">
             <a href="../../../weather/radar/xft-index_e.html">Radar</a>
@@ -755,9 +755,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <section>
           <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Detailed Forecast</span>Issued: 5:00 AM EST Sunday 1 January 2017</h3>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="pull-right" title="Chance of flurries"></div>
             <div class="col-xs-6">
-              <a href="/web/20170101123719/http://weather.gc.ca/forecast/hourly/on-118_metric_e.html">
+			<img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="pull-right" title="Chance of flurries"></div>
+            <div class="col-xs-6">
+              <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
                 <strong title="Sunday">Today</strong>
               </a>
               <br><span class="high wxo-metric-hide" title="max">-2&deg;<abbr title="Celsius">C</abbr>
@@ -1029,10 +1030,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </div>
       </details>
     </section>
+	
     <ul class="list-unstyled visible-xs wxo-btn">
       <li>
-        <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="/past_conditions/index_e.html?station=yow">Past 24 hour Conditions</a>
-        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
+        <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="../../../weather/past_conditions/index_e.html">Past 24 hour Conditions</a>
+        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="../../../weather/past_conditions/index_e.html">Past 24 hour Conditions</a>
       </li>
       <li>
         <a href="../../../weather/radar/index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
@@ -1050,7 +1052,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <a href="../../../weather/airquality/pages/onaq-008_e.html" class="btn btn-default btn-sm btn-block">Air Quality Health Index</a>
       </li>
       <li>
-        <a class="btn btn-default btn-sm btn-block" href="/warnings/index_e.html">Alerts</a>
+        <a class="btn btn-default btn-sm btn-block" href="../../../weather/warnings/index_e.html">Alerts</a>
       </li>
       <li>
         <a href="/jet_stream/index_e.html" class="btn btn-default btn-sm btn-block">Jet Stream</a>
