--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -151,7 +151,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                                 <li><a href="#">Canadian Ice Service</a></li>
                                 <li><a href="#">Seasonal forecasts</a></li>
                                 <li><a href="#">Extended forecasts</a></li>
-                                <li><a href="../../../weather/mainmenu/alert_menu_e.html">Public Alerts - Canada</a></li>
+                                <li><a href="../../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
                                 <li><a href="../../../weather/lightning/index_e.html">Lightning</a></li>
                                 <li><a href="#">Hurricane</a></li>
                                 <li><a href="#">Weather Summaries</a></li>
@@ -184,14 +184,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
-            <a class="wxo-metric-hide" href="/past_conditions/index_e.html?station=yow">Past 24 hours</a>
-            <a class="wxo-imperial-hide wxo-city-hidden" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hours</a>
+            <a class="wxo-metric-hide" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
+            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="/satellite/index_e.html#goes_east">Satellite</a>
+            <a href="../../../satellite/index_e.html#goes_east">Satellite</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/lightning/index_e.html">Lightning</a>
@@ -1028,8 +1028,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </section>
     <ul class="list-unstyled visible-xs wxo-btn">
       <li>
-        <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="/past_conditions/index_e.html?station=yow">Past 24 hour Conditions</a>
-        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
+         <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="../../../weather/past_conditions/index_e.html">Past 24 hour Conditions</a>
+        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="../../../weather/past_conditions/index_e.html">Past 24 hour Conditions</a>
       </li>
       <li>
         <a href="../../../weather/radar/index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
