--- a/scenarioT/weather/past_conditions/index_e.html
+++ b/scenarioT/weather/past_conditions/index_e.html
@@ -257,7 +257,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 13:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -291,7 +291,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 12:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -325,7 +325,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 11:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -359,7 +359,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 10:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -393,7 +393,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 09:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -433,7 +433,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 08:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -467,7 +467,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 07:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/03.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -501,7 +501,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 06:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -535,7 +535,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 05:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -569,7 +569,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 04:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -603,7 +603,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 03:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -637,7 +637,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 02:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -671,7 +671,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 01:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/12.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/12.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -705,7 +705,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 00:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/12.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/12.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -742,7 +742,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 23:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -776,7 +776,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 22:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -810,7 +810,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 21:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/10.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -844,7 +844,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 20:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/33.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -874,7 +874,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 19:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -904,7 +904,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 18:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -934,7 +934,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 17:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -970,7 +970,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 16:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -1000,7 +1000,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 15:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/02.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -1030,7 +1030,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 14:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
@@ -1060,7 +1060,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 13:00 </td>
-            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
+            <td headers="header2" class="media vertical-center"><span class="pull-left"><img class="media-object" height="35" width="35" src="../weathericons/small/01.png" /></span><div class="visible-xs visible-sm">
                 <br />
                 <br />
               </div>
