--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -191,7 +191,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <a href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../satellite/index_e.html#goes_east">Satellite</a>
+            <a href="../../../weather/satellite/index_e.html">Satellite</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/lightning/index_e.html">Lightning</a>
