--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -228,11 +228,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/12.png" alt="Periods of rain" /></span><div class="media-body">
+            <p>Periods of rain</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">Medium</td>
         <td headers="header5" class="text-center">
           <abbr title="West">W</abbr> 20<br />
 									gust 40</td>
@@ -240,11 +240,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers. Risk of severe thunderstorms</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/12.png" alt="Periods of rain" /></span><div class="media-body">
+            <p>Periods of rain</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">Medium</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 20<br />
 									gust 40</td>
@@ -256,7 +256,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">Medium</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 20<br />
 									gust 40</td>
@@ -264,11 +264,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">17</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers" /></span><div class="media-body">
+            <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">Medium</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 20<br />
 									gust 40</td>
