--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -228,8 +228,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/12.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Periods of rain</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Periods of rain" /></span><div class="media-body">
+            <p>Chance of showers</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Medium</td>
@@ -240,8 +240,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/12.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Periods of rain</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Periods of rain" /></span><div class="media-body">
+            <p>Chance of showers</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Medium</td>
