stormy at noon, less at night

--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -500,14 +500,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="A few showers or severe thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
                 <small> </small>
               </p>
-              <p class="mrgn-bttm-0">A few showers or thunderstorms</p>
+              <p class="mrgn-bttm-0">A few showers or severe thunderstorms</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr>
@@ -575,14 +575,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/36.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">54&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
-                <small> </small>
+                <small> 30%</small>
               </p>
-              <p class="mrgn-bttm-0">A few showers or severe thunderstorms</p>
+              <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">52&deg;<abbr title="Fahrenheit">F</abbr>
@@ -657,7 +657,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                   <td>
                     <strong title="Sunday night">Tonight</strong>
                   </td>
-                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm this evening. Wind southwest 20 km/h becoming light this evening. Low 12.</td>
+                  <td>A few showers ending late this evening then mainly cloudy. RWind southwest 20 km/h becoming light this evening. Low 12.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
